# rpa_sa

./: .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
rasa/: extensions.py  non_local.py  setup.py
rasa/csrc/: rasa.cpp
rasa/csrc/ops/: relative_attend_query2d.cpp  relative_attend_query2d.h  relative_attend_weight2d.cpp  relative_attend_weight2d.h  rotative_pad2d.cpp  rotative_pad2d.h  spherical_pad2d.cpp  spherical_pad2d.h
rasa/csrc/ops/autocast/: relative_attend_query2d_kernel.cpp  relative_attend_weight2d_kernel.cpp  rotative_pad2d_kernel.cpp  spherical_pad2d_kernel.cpp
rasa/csrc/ops/autograd/: relative_attend_query2d_kernel.cpp  relative_attend_weight2d_kernel.cpp  rotative_pad2d_kernel.cpp  spherical_pad2d_kernel.cpp
rpa/: setup.py
rpa/csrc/: rpa.cpp
rpa/csrc/ops/: ops.h  relative_attend_query2d.cpp  relative_attend_query2d.h  relative_attend_weight2d.cpp  relative_attend_weight2d.h  rotative_pad2d.cpp  rotative_pad2d.h
rpa_sa/: __init__.py  extension.py  non_local.py  setup.py
rpa_sa/csrc/: rpa_sa.cpp
rpa_sa/csrc/ops/: ops.h  relative_attend_query2d.cpp  relative_attend_query2d.h  relative_attend_weight2d.cpp  relative_attend_weight2d.h  rotative_pad2d.cpp  rotative_pad2d.h  spherical_pad2d.cpp  spherical_pad2d.h
test/: test_im2patches.py  test_rasa_non_local.py  test_relative_attend_query2d.py  test_relative_attend_weight2d.py  test_rotative_pad2d.py  test_rpa_non_local.py  test_spherical_pad2d.py
tests/: test_relative_attend_query2d.py  test_rotative_pad2d.py  test_rpa_non_local.py  test_spherical_pad2d.py
(+51 files in other folders)
